[package]
name = "discst"
version = "0.1.0"
edition = "2021"
default-run = "discst"

[dependencies]
mc-query = "0.2.0"
serde = { version = "1.0.142", features = ["derive"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = "1.20.1"
toml = "0.5.9"

[[bin]]
name = "sendmessage"
