[package]
name = "discst"
version = "0.1.6"
edition = "2021"
default-run = "discst"

[dependencies]
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
async-minecraft-ping = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
toml = "0.7.2"

[[bin]]
name = "sendmessage"
